- Update Kotlin gradle version - Moved AppGlideModule to a separate module - Created Room module for database classes
CHALLENGE 5: Favorites list:
- Favorites activity with a list that displays all favorite movies
- Item click shows movie details screen

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':features:list', ':features:favorites', ':dagger.addons', ':roomdatabase', 'features:detail'
+include ':app', ':features:list', ':features:favorites', ':dagger.addons', ':roomdatabase', ':glidemodule', 'features:detail'
