--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation project(':features:detail')
 }
