--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        sqldelight = '1.2.0'
+        kotlin_version = '1.3.50'
     }
 
     repositories {
@@ -27,6 +29,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
+        classpath "com.squareup.sqldelight:gradle-plugin:$sqldelight"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
