--- a/features/favorites/src/main/AndroidManifest.xml
+++ b/features/favorites/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.vp.favorites">
 
     <application>
-        <activity android:name=".FavoriteActivity"
-            android:label="@string/activity_label">
+        <activity android:name=".view.FavoritesActivity"
+            android:label="@string/favorites_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
