--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -15,7 +15,8 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debugProguard {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -31,10 +32,8 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':common')
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
-    //glide
-    implementation "com.github.bumptech.glide:glide:$rootProject.glide"
-    kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
 
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
@@ -50,6 +49,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$rootProject.supportLibraryVersion"
     implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
 
     //api
