--- a/features/favorites/build.gradle
+++ b/features/favorites/build.gradle
@@ -31,7 +31,7 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
-    implementation project(':persistence')
+    api project(':persistence')
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
