--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
     ext {
         androidPluginVersion = '3.2.1'
         //sdk and tools
@@ -18,6 +18,7 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        room = '2.0.0'
     }
 
     repositories {
