Manage shrink resources + poster.jpg to imageoptim (+readme images)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,13 @@ android {
         }
         debugProguard {
             initWith buildTypes.debug
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources true
+            minifyEnabled true
+        }
+        release {
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources true
             minifyEnabled true
         }
     }
