--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.21.0"
     testImplementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofit"
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
