--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
         //dependencies
         kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
+        supportLibraryVersion = '1.1.0'
         constraintLayout = '1.1.2'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
@@ -18,6 +18,7 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        room = '2.2.2'
     }
 
     repositories {
@@ -42,4 +43,19 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.arch.core'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "2.0.0"
+            }
+            if (details.requested.group == 'androidx.core'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "1.1.0"
+            }
+        }
+    }
 }
