--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -21,6 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             minifyEnabled true
         }
+        release {
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+        }
     }
 
     compileOptions {
@@ -31,7 +35,8 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation project(':features:detail')
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.61'
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
@@ -57,11 +62,11 @@ dependencies {
     implementation "com.google.code.gson:gson:$rootProject.gson"
 
     //test
-    testImplementation "org.assertj:assertj-core:3.11.1"
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.assertj:assertj-core:3.15.0'
+    testImplementation 'junit:junit:4.13'
     testImplementation "org.mockito:mockito-core:2.21.0"
     testImplementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofit"
-    testImplementation 'androidx.arch.core:core-testing:2.0.0'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
