--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.61'
+
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '3.5.3'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
+        kotlin = '1.3.61'
+        supportLibraryVersion = '1.1.0'
+        constraintLayout = '1.1.3'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        roomVersion = '2.2.3'
+        archLifecycleVersion = '2.2.0'
     }
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$androidPluginVersion"
@@ -30,11 +35,14 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 allprojects {
     repositories {
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
         google()
         jcenter()
     }
