--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -31,7 +31,8 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation project(':features:api')
+
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
@@ -48,9 +49,10 @@ dependencies {
 
     //support library
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
-    implementation "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
+    api "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
     implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     //api
     api "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
