--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.70'
+
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '3.5.3'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
+        kotlin = '1.3.70'
         supportLibraryVersion = '1.0.0'
         constraintLayout = '1.1.2'
         retrofit = '2.4.0'
@@ -18,6 +20,8 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+
+        roomVersion = '2.2.1'
     }
 
     repositories {
@@ -30,6 +34,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
