--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':features:list', ':features:favorites', ':dagger.addons', 'features:detail'
+include ':app', ':features:list', ':features:favorites', ':dagger.addons', ':persistance', ':glide2', 'features:detail'
