--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
