--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,23 @@
 
 buildscript {
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '4.0.0'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
-        retrofit = '2.4.0'
-        lifecycle = '2.0.0'
-        gson = '2.8.2'
+        kotlin = '1.3.72'
+        supportLibraryVersion = '1.1.0'
+        constraintLayout = '1.1.3'
+        retrofit = '2.9.0'
+        lifecycle = '2.2.0'
+        gson = '2.8.5'
         dagger = '2.16'
         glide = '4.8.0'
-        okhttp = '3.10.0'
+        okhttp = '4.7.2'
+        kotlin_version = '1.3.72'
     }
 
     repositories {
