--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -14,10 +14,6 @@ android {
 
     }
 
-    dataBinding {
-        enabled = true
-    }
-
     buildTypes {
         debug {
             minifyEnabled false
@@ -32,13 +28,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':favorites:common')
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.72'
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
@@ -59,6 +60,11 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofit"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'com.jraska.livedata:testing-ktx:1.1.2'
+    testImplementation 'org.mockito:mockito-inline:2.23.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
