--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':features:list', ':features:favorites', ':dagger.addons', 'features:detail'
+include ':favorites:common'
+include ':app', ':features:list', ':features:favorite', ':dagger.addons', 'features:detail'
