--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -14,9 +14,7 @@ android {
 
     }
 
-    dataBinding {
-        enabled = true
-    }
+    buildFeatures.dataBinding true
 
     buildTypes {
         debug {
@@ -38,7 +36,7 @@ dependencies {
     implementation project(':dagger.addons')
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.72'
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
