--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,17 @@ buildscript {
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
+        kotlin = '1.3.72'
+        supportLibraryVersion = '1.2.0'
+        recyclerView = '1.1.0'
+        constraintLayout = '1.1.3'
         retrofit = '2.4.0'
         lifecycle = '2.0.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        room_version = "2.2.5"
     }
 
     repositories {
@@ -38,6 +40,10 @@ allprojects {
         google()
         jcenter()
     }
+    configurations.all {
+        resolutionStrategy.force "androidx.arch.core:core-runtime:2.0.1"
+    }
+
 }
 
 task clean(type: Delete) {
