--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        room = '2.0.0'
+        anko = '0.10.8'
     }
 
     repositories {
