--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -36,6 +36,8 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':features:favorites')
+
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
@@ -61,4 +63,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    //ROOM
+    kapt "androidx.room:room-compiler:$rootProject.room"
+    implementation "androidx.room:room-runtime:$rootProject.room"
+    implementation "androidx.room:room-rxjava2:$rootProject.room"
 }
