--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        rxjava = '2.2.7'
+        rxcalladapter = '2.5.0'
+        rxandroid = '2.1.1'
+        leakcanary = '2.4'
     }
 
     repositories {
