--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,24 @@
 
 buildscript {
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '4.0.1'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
-        supportLibraryVersion = '1.0.0'
-        constraintLayout = '1.1.2'
-        retrofit = '2.4.0'
-        lifecycle = '2.0.0'
-        gson = '2.8.2'
-        dagger = '2.16'
-        glide = '4.8.0'
-        okhttp = '3.10.0'
+        kotlin = '1.4.10'
+        appcompat = '1.2.0'
+        material = '1.2.1'
+        recyclerView = '1.1.0'
+        constraintLayout = '2.0.2'
+        retrofit = '2.9.0'
+        lifecycle = '2.2.0'
+        gson = '2.8.6'
+        dagger = '2.29.1'
+        glide = '4.11.0'
+        okhttp = '4.9.0'
     }
 
     repositories {
@@ -25,7 +27,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$androidPluginVersion"
+        classpath "com.android.tools.build:gradle:${androidPluginVersion}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
 
         // NOTE: Do not place your application dependencies here; they belong
