--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         retrofit = '2.9.0'
         lifecycle = '2.2.0'
         gson = '2.8.6'
+        sqlDelight = '1.4.3'
         dagger = '2.29.1'
         glide = '4.11.0'
         okhttp = '4.9.0'
